[gd_scene load_steps=4 format=3 uid="uid://c8yw42bluf2h1"]

[ext_resource type="Script" path="res://button_area.gd" id="1_ygow8"]
[ext_resource type="Texture2D" uid="uid://bpb4etpgfldl4" path="res://resources/button_back.png" id="2_8dlhh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3nuhs"]
size = Vector2(300, 40)

[node name="Info_Button" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-2, 0)
script = ExtResource("1_ygow8")

[node name="ButtonBack" type="Sprite2D" parent="Area2D"]
position = Vector2(152, 20)
texture = ExtResource("2_8dlhh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(152, 20)
shape = SubResource("RectangleShape2D_3nuhs")

[node name="Label" type="Label" parent="Area2D"]
offset_left = 20.0
offset_top = 8.0
offset_right = 271.0
offset_bottom = 47.0
text = "Info"

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_mouse_exited"]
